--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -4,7 +4,43 @@
  * ref：https://v1.vuepress.vuejs.org/zh/config/#palette-styl
  */
 
+$themeFont = "https://fonts.googleapis.com/css?family=Roboto+Mono|Lato&display=swap"
+$bodyFontFamily = "Inter"
+$monoFontFamily = "Roboto Mono"
+$bodyFontSize = 18px
+
+// colors - light theme
 $accentColor = #3eaf7c
 $textColor = #2c3e50
 $borderColor = #eaecef
 $codeBgColor = #282c34
+$arrowBgColor = #ccc
+$bodyBgColor = #fff
+$badgeTipColor = #e7f1ec
+$badgeWarningColor = #f8f2d1
+$badgeErrorColor = #ffdadc
+
+// colors - dark theme
+$accentColorDark = #3eaf7c
+$textColorDark = #e2e1db
+$borderColorDark = #4c525c
+$codeBgColorDark = #1a1c22
+$arrowBgColorDark = #555
+$bodyBgColorDark = #25262b
+$badgeTipColorDark = #1b4b35
+$badgeWarningColorDark = #574e21
+$badgeErrorColorDark = #692025
+
+// layout
+$navbarHeight = 3.6rem
+$sidebarWidth = 20rem
+$contentWidth = 740px
+$homePageWidth = 960px
+
+// responsive breakpoints
+$MQNarrow = 959px
+$MQMobile = 719px
+$MQMobileNarrow = 419px
+
+// fallback theme
+$fallbackTheme = 'dark'
