--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -8,6 +8,7 @@ $themeFont = "https://fonts.googleapis.com/css?family=Roboto+Mono|Lato&display=s
 $bodyFontFamily = "Inter"
 $monoFontFamily = "Roboto Mono"
 $bodyFontSize = 18px
+$vp-icon-color ?= currentColor
 
 // colors - light theme
 $accentColor = #3eaf7c
