修复，新增宠物页面

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -170,7 +170,7 @@ body
     margin-top $navbarHeight
 
   a:hover
-    text-decoration underline
+    text-decoration none
 
   p.demo
     padding 1rem 1.5rem
