修改pwa更新信息UI

--- a/docs/.vuepress/styles/config.styl
+++ b/docs/.vuepress/styles/config.styl
@@ -6,7 +6,7 @@ $textColor = #2c3e50
 $borderColor = #eaecef
 $codeBgColor = #282c34
 $arrowBgColor = #ccc
-$bodyBgColor = #fff
+$bodyBgColor = #fafafa
 $badgeTipColor = #e7f1ec
 $badgeWarningColor = #f8f2d1
 $badgeErrorColor = #ffdadc
